<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.datanucleus</groupId>
    <version>6.0</version>
    <artifactId>datanucleus-test-samples</artifactId>
    <name>DataNucleus TestSamples</name>
    <description><![CDATA[
        DataNucleus Test Samples, providing the basic samples used in testing.
        ]]></description>

    <dependencies>
        <dependency>
            <groupId>org.datanucleus</groupId>
            <artifactId>datanucleus-test-framework</artifactId>
            <version>6.0</version>
        </dependency>
    </dependencies>

    <build>
        <!-- For the defaults of Maven 2.0.x see http://maven.apache.org/pom.html#The_Super_POM -->
        <sourceDirectory>src/java</sourceDirectory>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>src/java</directory>
                <includes>
                    <include>**/plugin.xml</include>
                    <include>**/*.properties</include>
                </includes>
            </resource>
            <resource>
                <directory>${basedir}/src/conf</directory>
                <includes>
                    <include>**/*.properties</include>
                </includes>
            </resource>
            <resource>
                <directory>${basedir}</directory>
                <targetPath>META-INF</targetPath>
                <includes>
                    <include>LICENSE.txt</include>
                    <include>NOTICE.txt</include>
                    <include>README.txt</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <encoding>ISO-8859-1</encoding>
                    <source>11</source>
                    <target>11</target>
                    <!-- compilerArgument>-Xlint:unchecked</compilerArgument-->
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
